EBNF/EBNF_FINAL
program         = "START", devices, connections, outputs, "END" ;


name            = (letter | "_"), {letter | digit | "_"} ;


device          = name, "=", type, ";" ;


type            = clock | switch | and | nand | or | nor | dtype | xor ;

clock           = "CLOCK", "(", number , ")" ;

switch          = "SWITCH", "(", number , ")"  ;

and             = "AND", "(", number , ")" ;

nand            = "NAND", "(", number , ")" ;

or              = "OR", "(", number , ")" ;

nor             = "NOR", "(", number , ")" ;

dtype           = "DTYPE" ;

xor             = "XOR" ;



signal          = name, [".", name] ;

connection      = signal, ">", signal, ";" ;

output          = signal, "~", name, ";" ;


devices         = "DEVICES", "{", device, {device}, "}";

connections     = "CONNECTIONS", "{", connection, {connection}, "}" ;

outputs         = "OUTPUTS", "{", output, {output}, "}";
